2003-03-10  Gert-Jan Paulissen  <g.paulissen@chello.nl>

        * Makefile.am: dbugrpt.pl removed from EXTRA_DIST, since it is now
	created by Imakefile from dbugrpt.in.
